WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303820
Facebook.com is crashing on WebKit ToT
https://bugs.webkit.org/show_bug.cgi?id=303820
Summary
Facebook.com is crashing on WebKit ToT
youenn fablet
Reported
2025-12-09 03:33:22 PST
Facebook.com is crashing on WebKit ToT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-09 03:33:35 PST
<
rdar://problem/166132505
>
youenn fablet
Comment 2
2025-12-09 03:35:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55098
EWS
Comment 3
2025-12-09 04:31:27 PST
Committed
304147@main
(69d1446021b4): <
https://commits.webkit.org/304147@main
> Reviewed commits have been landed. Closing PR #55098 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug