Facebook.com is crashing on WebKit ToT rdar://166132505 https://bugs.webkit.org/show_bug.cgi?id=303820

Reviewed by Keith Miller.

https://commits.webkit.org/304020@main introduced a bad release assert.
We remove the assert, manually tested.

* Source/JavaScriptCore/heap/Heap.cpp:
(JSC::Heap::sweepSynchronously):

Canonical link: https://commits.webkit.org/304147@main